Change Log

20190703 SCL
- change OEII voltage defaults to lincomatic's from CraigK's
	
D6.0.0 20190626 SCL
- added code to facilitate OCPP support
- RAPI changes that may render code incompatible w/ existing clients
  -> see $AB, $AT, $SC
  -> sequence ID always enabled
  -> $FF command always enabled, deprecating old redundant commands
  -> $WF enabled only if RAPI_WF defined
  -> get rid of RAPI_RESPONSE_CHK define.. always enabled
- J1772EvseController -> expand m_bVFlags to m_wVFlags, get rid of m_bVFlags2,
	clean up flag setting/clearing/testing code
  -> added ECVF_UI_IN_MENU... flag is set/unset when in/out of UI menus..
	$AT is sent on transition
  -> bump RAPIVER to 5.0.0
	
D5.2.0 20190329 SCL
- change $GS to return state(hex) elapsed(dec) pilotstate(hex)
- get rid of async notification $ST - always send $AT	

D5.1.0 20181109 SCL
- change session time & charge limits to be absolute instead of extending the current session. e.g. already charged 2kWh.. set limit to 3kWh ... stop @ 3kWh instead of 5kWh
	
D5.0.1 20181018 SCL
- fix Issue #94. Overcurrent caused lockup. Merge fixes from test1 branch 

20180823 SCL
- merged PR#94: doesn't affect functionality, only to correct compile errors on minimal builds
	
20180724 SCL
- added RELAY_AUTO_PWM code - not tested - needs PWM-capable pin to function
	
20180523 SCL
- when RTC not defined, g++ bug pops out:
	open_evse:2384: error: unable to find a register to spill in class 'NO_REGS'
  -> add GPPBUGKLUDGE
	
D5.0.0 20180518 SCL
- implement $F1 RAPI command to simulate front panel short press
- SAFETY: don't allow $SC to raise current capacity during over temperature event
- SAFETY: SetCurrentCapacity() -> when nosave set, don't allow current capacity to be
	raised above EEPROM value
	-> don't allow $SC with V to raise current capacity above value in EEPROM
	-> don't allow PP to set current capacity higher than EEPROM
- PP code cleanup
- don't allow SetCurrentCapacity() to go above PP value